@@ -1,3 +1,10 @@
+1999-06-23  Doug Evans  <devans@casey.cygnus.com>
+
+	* cgen-engine.h (TARGET_SEM_BRANCH_FINI): Remove cruft at end of
+	ifndef.
+	* genmloop.sh (@cpu@_scache_lookup): Delete unused local var.
+	(@cpu@_pbb_cti_chain): Minor clean up.
+
 1999-05-08  Felix Lee  <flee@cygnus.com>
 
         * aclocal.m4: Use AC_EXEEXT instead of AM_EXEEXT.  Delete defn of
